# Testapp

./: .gitignore  CMakeLists.txt  Testapp.sln  Testapp.sln.licenseheader
Testapp/: .editorconfig  Audiosystem.cpp  Audiosystem.h  Behaviour.cpp  Behaviour.h  Camera.cpp  Camera.h  CameraHolder.cpp  CameraHolder.h  Character.cpp  Character.h  CharacterMotor.cpp  CharacterMotor.h  Cloth.cpp  Cloth.h  ClothRenderer.cpp  ClothRenderer.h  Collider2D.cpp  Collider2D.h  Config.cpp  Config.h  DL.bat  Entity.cpp  Entity.h  FadingRect.cpp  FadingRect.h  FreeCam.cpp  FreeCam.h  GameObject.cpp  GameObject.h  GeometryRenderer.cpp  GeometryRenderer.h  Lighting.cpp  Lighting.h  Mesh3D.cpp  Mesh3D.h  MeshRenderer.cpp  MeshRenderer.h  MouseLook.cpp  MouseLook.h  (+34 more)
Testapp/Resources/Audio/: Anri - Night Tempo Showa Groove Megamix.m4a
Testapp/Resources/Data/: CONFIG.INI
Testapp/Resources/Shaders/: 3DLight_BlinnPhong.fs  3DLight_BlinnPhongFog.frag  3DLight_BlinnPhongFog.fs  3DLight_BlinnPhongRim.frag  3DLight_PBR.fs  3DLight_Phong.fs  3DLight_Reflective.frag  3DLight_Reflective.fs  3DLight_ReflectiveFog.fs  3DLight_ReflectiveRim.fs  3D_Normals.vs  ClipSpace.vs  FixedColor.fs  FixedTriangle.vert  FixedTriangle.vs  GPUParticle.comp  GPUParticle.frag  GPUParticle.vert  GeoShader.fs  SkyBox.fs  (+25 more)
Testapp/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
(+5 files in other folders)
